fixed scroll bar, header consistent sizing and stick to top, fixed post spacing

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,5 +1,9 @@
 .header {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
   display: flex;
+  height: 50px;
   width: 100%;
   background-color: white;
   align-items: center;
@@ -16,6 +20,7 @@
 @media screen and (min-width: 425px) {
   .header {
     display: flex;
+    height: 50px;
     width: 100%;
     background-color: white;
     align-items: center;
