--- a/src/components/Post/styles.scss
+++ b/src/components/Post/styles.scss
@@ -1,5 +1,5 @@
 .post {
-  margin-bottom: 45px;
+  margin-bottom: 50px;
   width: 100%;
   &-footer {
     padding: 10px;
@@ -27,15 +27,18 @@
 
 @media screen and (min-width: 425px) {
   .post {
-    margin-bottom: 45px;
+    margin-top: 20px;
+    margin-bottom: 40px;
     max-width: 425px;
     border-left: 1px solid lightgrey;
     border-right: 1px solid lightgrey;
     &-footer {
       padding: 10px;
       border-bottom: 1px solid lightgrey;
+      max-width: 425px;
     }
     &-header {
+      max-width: 425px;
       &-paper {
         display: flex;
         align-items: center;
